--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             const text = document.getElementById('text').value;
 
             try {
-                const response = await fetch('http://104.197.90.64:5000/generate_transcript', {
+                const response = await fetch('https://104.197.90.64:5000/generate_transcript', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
